src/objects/KB_Search_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal App</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Public Knowledge Base</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Product_Family__c</fullName>
        <label>Customer Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>User__r.Contact.Account.Name</formula>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Filter__c</fullName>
        <label>EMS Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMC_Filter__c</fullName>
        <label>IMC Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Date__c</fullName>
        <label>Search Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Search_In_Article_Types__c</fullName>
        <label>Search In Article Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>How To</fullName>
                </value>
                <value>
                    <fullName>Release Notes</fullName>
                </value>
                <value>
                    <fullName>Tech Advisory</fullName>
                </value>
                <value>
                    <fullName>Tech Tips</fullName>
                </value>
                <value>
                    <fullName>Ticket Solutions</fullName>
                </value>
                <value>
                    <fullName>User Manuals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search_Results_Count__c</fullName>
        <label>Search Results Count</label>
        <summaryForeignKey>KB_Search_Result__c.KB_Search_Tracking__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Search_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Search Success?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KB_Search_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisiNet_Filter__c</fullName>
        <label>VisiNet Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisionAIR_Filter__c</fullName>
        <label>VisionAIR Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>KB Search Tracking</label>
    <nameField>
        <displayFormat>KBST-{0000}</displayFormat>
        <label>KB Search Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KB Search Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>